--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -88,8 +88,8 @@
               </li>
               <li class="ti-item" *ngFor="let group of groupPermissionForm.value.userGroups; let index = i">
                 <i class="{{group.permission !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
-                <span>{{group.userGroup !== ''?group.userGroup:''}} :</span>
-                <strong *ngIf="group.permission !== ''? true:false">{{group.permission !== ''?group.permission:''}}</strong>
+                <span>{{group.userGroup !== ''?groupProperties(true,group.userGroup):''}} :</span>
+                <strong *ngIf="group.permission !== ''? true:false">{{group.permission !== ''?groupProperties(false,group.permission):''}}</strong>
               </li>
             </ul>
            
@@ -200,7 +200,7 @@
                               <div class="d-flex  mr-5 align-items-center">
                                 <select class="form-control" formControlName="logTemp">
                                   <option value="" [disabled]="true">Select</option>
-                                  <option *ngFor="let pipelineData of pipelineExists" value="{{pipelineData.name}}">{{pipelineData.name}}</option>
+                                  <option *ngFor="let logTemplate of logTemplateData" value="{{logTemplate.templateName}}">{{logTemplate.templateName}}</option>
                                 </select>
                                 <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Template" (click)="onAddTemplate()"><a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link"><i class="fas fa-plus"></i></a></span>
                               </div>
@@ -210,7 +210,7 @@
                               <div class="d-flex  mr-5 align-items-center">
                                 <select class="form-control" formControlName="metricTemp">
                                   <option value="" [disabled]="true">Select</option>
-                                  <option *ngFor="let pipelineData of pipelineExists" value="{{pipelineData.name}}">{{pipelineData.name}}</option>
+                                  <option *ngFor="let metricTemplate of metricTemplateData" value="{{metricTemplate.templateName}}">{{metricTemplate.templateName}}</option>
                                 </select>
                                 <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Metric Template" (click)="onAddTemplate()"><a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link"><i class="fas fa-plus"></i></a></span>
                               </div>
@@ -248,7 +248,7 @@
                                   <label>Docker Account & Image Name</label>
                                   <div class="d-flex  mr-5 align-items-center">
                                       <div class="col-5 dockerImageSource">
-                                        <select class="form-control customAcc {{isReadonly(i)?'disabledinput':''}}" formControlName="accountName" value="{{dockerAccountName}}" (change)="onChangeDockerAcc($event,i)" [disabled]="isReadonly(i)" 
+                                        <select class="form-control customAcc {{isReadonly(i)?'disabledinput':''}}" formControlName="accountName" value="{{dockerAccountName}}" (change)="onChangeDockerAcc($event,i)"
                                         [ngClass]="!pipelineArr.get('dockerImageName.imageName').valid && pipelineArr.get('dockerImageName.imageName').touched ? 'wheninvalid':''">
                                           <option value="" [disabled]="true">Select</option>
                                           <option *ngFor="let dockerimages of dockerImageData" value="{{dockerimages.imageSource}}">{{dockerimages.imageSource}}</option>
@@ -393,7 +393,7 @@
                                   <select class="form-control" formControlName="userGroup"
                                   [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').valid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').touched ? 'is-invalid':''">
                                     <option value="" [disabled]="true">Select</option>
-                                    <option *ngFor = "let user of userGroupDropdownData[i]" value="{{user}}">{{user}}</option>
+                                    <option *ngFor = "let user of userGroupDropdownData[i]" value="{{user.userGroupId}}">{{user.userGroupName}}</option>
                                   </select>
                                   <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').invalid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').touched"
                                   class="invalid-feedback">
@@ -405,9 +405,9 @@
                                   <select class="form-control" formControlName="permission"
                                   [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('permission').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permission').touched ? 'is-invalid':''">
                                     <option value="" [disabled]="true">Select</option>
-                                    <option value="Read">Read Only</option>
-                                    <option value="Read,Execute">Read & Execute</option>
-                                    <option value="Read,Write,Execute">Read, Execute & Write</option>
+                                    <option value="r">Read Only</option>
+                                    <option value="rx">Read & Execute</option>
+                                    <option value="rwx">Read, Execute & Write</option>
                                   </select>
                                   <span *ngIf="!groupPermissionForm.get('userGroups')['controls'][i].get('permission').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permission').touched"
                                   class="invalid-feedback">Permission is required</span>
@@ -463,7 +463,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">New Log Template</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" #logModel>
           <i class="fa fa-times"></i>
         </button>
       </div>
@@ -480,7 +480,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">New Metric Template</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" #metricModel>
           <i class="fa fa-times"></i>
         </button>
       </div>
