--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -27,11 +27,8 @@
     <div class="tab-pane fade show active" id="graph01" role="tabpanel" aria-labelledby="graph01-tab">
       <div class="dot_container p-3 chart-bg-color">
         <div class="graph" #ChartSize>
-          <div class="dropdown dropdown-icon-remove float-right">
-            <button class="btn p-0 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              <img src="../../../assets/images/dotted-icon.png" alt="">
-            </button>
+          
+            
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
               <li class="dropdown-item">
                 <div class="custom-control custom-checkbox">
@@ -62,9 +59,9 @@
                 </div>
               </li>
             </ul>
-          </div>
+          
           <fusioncharts
-  width="600"
+  width="100%"
   height="350"
   type="bubble"
   dataFormat="JSON"
