--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -28,7 +28,7 @@
                 <span>Email :</span>
                 <strong>{{createApplicationForm.value.emailId}}</strong>
               </li>
-              <li class="ti-item" *ngIf = "userType === 'Autopilot Only' ? false : true ">
+              <li class="ti-item" *ngIf = "userType === 'AP' ? false : true ">
                 <i class="{{createApplicationForm.getRawValue().imageSource !== ''?'fas fa-check-circle':'far fa-dot-circle'}}"></i>
                 <span>Image Source :</span>
                 <strong>{{createApplicationForm.getRawValue().imageSource}}</strong>
@@ -53,12 +53,12 @@
                 <span>Service name</span>
                 <strong>{{serviceArr.serviceName}}</strong>
               </li>
-              <li class="ti-item" *ngIf = "userType.includes('Autopilot')">
+              <li class="ti-item" *ngIf = "userType.includes('AP')">
                 <i class="{{serviceArr.logTemp !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
                 <span>Log Template</span>
                 <strong>{{serviceArr.logTemp}}</strong>
               </li>
-              <li class="ti-item" *ngIf = "userType.includes('Autopilot')">
+              <li class="ti-item" *ngIf = "userType.includes('AP')">
                 <i class="{{serviceArr.metricTemp !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
                 <span>Metric Template</span>
                 <strong>{{serviceArr.metricTemp}}</strong>
@@ -80,16 +80,16 @@
               </li>
             </ul>
             
-            <ul class="tree-inset list-unstyled {{groupPermissionForm.value.userGroups[0].userGroup !== '' ? 'tree-active' : ''}}"
+            <ul class="tree-inset list-unstyled {{groupPermissionForm.value.userGroups[0].userGroupId !== '' ? 'tree-active' : ''}}"
               *ngIf="groupPermissionForm.value.userGroups.length > 0 ? true : false ">
               <li class="ti-title">
-                <i class="{{groupPermissionForm.value.userGroups[0].userGroup !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
+                <i class="{{groupPermissionForm.value.userGroups[0].userGroupId !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
                 <span>Group Permissions Details</span>
               </li>
               <li class="ti-item" *ngFor="let group of groupPermissionForm.value.userGroups; let index = i">
                 <i class="{{group.permission !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
-                <span>{{group.userGroup !== ''?groupProperties(true,group.userGroup):''}} :</span>
-                <strong *ngIf="group.permission !== ''? true:false">{{group.permission !== ''?groupProperties(false,group.permission):''}}</strong>
+                <span>{{group.userGroupId !== ''?groupProperties(true,group.userGroupId):''}} :</span>
+                <strong *ngIf="group.permission !== ''? true:false">{{group.permissionId !== ''?groupProperties(false,group.permissionId):''}}</strong>
               </li>
             </ul>
            
@@ -116,7 +116,7 @@
                 <form [formGroup]="createApplicationForm">
                   <div class="form-group">
                     <label>Application Name</label>
-                    <input type="text" class="form-control" formControlName="name" [readonly]="editMode" [ngClass]="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched ? 'is-invalid':''">
+                    <input type="text" appLowercase class="form-control" formControlName="name" [readonly]="editMode" [ngClass]="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched ? 'is-invalid':''">
                     <span *ngIf="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched"
                       class="invalid-feedback">
                       <span *ngIf="createApplicationForm.get('name').errors['required']">Application Name is
@@ -136,7 +136,7 @@
                       <span *ngIf="createApplicationForm.get('emailId').errors['email']">Please enter valid Email Id</span>
                     </span>
                   </div>
-                  <div class="form-group" *ngIf = "userType === 'Autopilot Only' ? false : true">
+                  <div class="form-group" *ngIf = "userType === 'AP' ? false : true">
                     <label>Image Source</label>
                     <select class="form-control" formControlName="imageSource" (change)="onImageSourceSelect($event.target.value)"
                     [ngClass]="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched?'is-invalid':''">
@@ -194,7 +194,7 @@
                               <span *ngIf="servicesForm.get('services')['controls'][i].get('serviceName').errors['symbols']">No Special characters are allowed.</span>
                             </span>
                           </div>
-                          <div class="col-12" *ngIf = "userType.includes('Autopilot')">
+                          <div class="col-12" *ngIf = "userType.includes('AP')">
                             <div class="form-group mb-3 pl-5 text-muted">
                               <label>Log Template</label>
                               <div class="d-flex  mr-5 align-items-center">
@@ -308,11 +308,11 @@
   
                <!-- ###################### Environment Section Starts ###########################-->
   
-              <div class="col-10" *ngIf = "userType === 'Autopilot Only' ? false : true">
+              <div class="col-10" *ngIf = "userType === 'AP' ? false : true">
                 <hr class="ml-0 mt-3 mb-3" />
               </div>
               <!-- /.col-8 -->
-              <div class="col-lg-8 col-12 col-xl-6" *ngIf = "userType === 'Autopilot Only' ? false : true">
+              <div class="col-lg-8 col-12 col-xl-6" *ngIf = "userType === 'AP' ? false : true">
                 <div class="form-group group_permission">
                   <label>Environments</label>
                   <div class="col-12">
@@ -390,26 +390,26 @@
                             <tr *ngFor="let optionsArr of groupPermissionForm.get('userGroups')['controls'];let i=index">
                               <ng-container [formGroupName]="i">
                                 <td>
-                                  <select class="form-control" formControlName="userGroup"
-                                  [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').valid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').touched ? 'is-invalid':''">
+                                  <select class="form-control" formControlName="userGroupId"
+                                  [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').valid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').touched ? 'is-invalid':''">
                                     <option value="" [disabled]="true">Select</option>
                                     <option *ngFor = "let user of userGroupDropdownData[i]" value="{{user.userGroupId}}">{{user.userGroupName}}</option>
                                   </select>
-                                  <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').invalid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').touched"
+                                  <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').invalid && groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').touched"
                                   class="invalid-feedback">
-                                    <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').errors['required']">Group name is required</span>
-                                    <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroup').errors['groupNameExist']">Group name already exist</span>
+                                    <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').errors['required']">Group name is required</span>
+                                    <span *ngIf="groupPermissionForm.get('userGroups')['controls'][i].get('userGroupId').errors['groupNameExist']">Group name already exist</span>
                                   </span>
                                 </td>
                                 <td>
-                                  <select class="form-control" formControlName="permission"
-                                  [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('permission').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permission').touched ? 'is-invalid':''">
+                                  <select class="form-control" formControlName="permissionId"
+                                  [ngClass]="!groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').touched ? 'is-invalid':''">
                                     <option value="" [disabled]="true">Select</option>
                                     <option value="r">Read Only</option>
                                     <option value="rx">Read & Execute</option>
                                     <option value="rwx">Read, Execute & Write</option>
                                   </select>
-                                  <span *ngIf="!groupPermissionForm.get('userGroups')['controls'][i].get('permission').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permission').touched"
+                                  <span *ngIf="!groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permissionId').touched"
                                   class="invalid-feedback">Permission is required</span>
                                 </td>
                                 <td>
