--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -44,7 +44,7 @@
                             <a class="dropdown-item" href="#">Services</a>
                             <a class="dropdown-item" href="#">Edit</a>
                             <div class="dropdown-divider"></div> -->
-                            <a class="dropdown-item" href="#">Delete</a>
+                            <a class="dropdown-item showElementHover" (click)="deleteApplication(application,i)">Delete</a>
                           </div>
                         </div>
               </div>
