--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -202,7 +202,7 @@
                                   <option value="" [disabled]="true">Select</option>
                                   <option *ngFor="let logTemplate of logTemplateData" value="{{logTemplate.templateName}}">{{logTemplate.templateName}}</option>
                                 </select>
-                                <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Template" (click)="onAddTemplate()"><a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link"><i class="fas fa-plus"></i></a></span>
+                                <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Template" (click)="onAddTemplate(i,'log')"><a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link"><i class="fas fa-plus"></i></a></span>
                               </div>
                             </div>
                             <div class="form-group mb-3 pl-5 text-muted">
@@ -212,7 +212,7 @@
                                   <option value="" [disabled]="true">Select</option>
                                   <option *ngFor="let metricTemplate of metricTemplateData" value="{{metricTemplate.templateName}}">{{metricTemplate.templateName}}</option>
                                 </select>
-                                <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Metric Template" (click)="onAddTemplate()"><a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link"><i class="fas fa-plus"></i></a></span>
+                                <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Metric Template" (click)="onAddTemplate(i,'metric')"><a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link"><i class="fas fa-plus"></i></a></span>
                               </div>
                             </div>
                           </div>
