--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -68,7 +68,7 @@
         <!-- /.table -->
   
     <div class="page_access d-flex text-right p-3">
-      <div class="mr-auto">
+      <div class="mr-auto" *ngIf="serviceListLength >= 10">
           <div class="input-group input-group_search">
             <div class="input-group-prepend">
               <span class="input-group-text" id="modal-search"><i class="fa fa-search"></i></span>
