--- a/src/styles.less
+++ b/src/styles.less
@@ -74,6 +74,9 @@ hr{
 	margin-bottom: 0.6rem;
 	border-color: #989898;
 }
+span{
+	font-family: 'Open Sans', sans-serif;
+}
 .underline{
 	text-decoration: underline;
 }
