--- a/src/app/error-handling/component-error-listing/component-error-listing.component.html
+++ b/src/app/error-handling/component-error-listing/component-error-listing.component.html
@@ -1,4 +1,4 @@
-<div class="tab-pane h-100 p-4 fade" role="tabpanel" aria-labelledby="service-correlation-tab">
+<div class="tab-pane h-100 p-4">
     <div class="d-flex w-100 h-100">
       <div class="no_content m-auto">
         <img src="../../assets/images/blank-fileIcon.png" alt="">
