--- a/src/app/error-handling/app-error-listing/app-error-listing.component.html
+++ b/src/app/error-handling/app-error-listing/app-error-listing.component.html
@@ -1,9 +1,8 @@
 <div class="container">
     <div class="error">
         <h1>500</h1>
-        <h2>error</h2>
-        <p>Ruh-roh, something just isn't right... Time to paw through your logs and get down and dirty in your
-            stack-trace;)</p>
+        <h3>Oops, something went wrong.</h3>
+        <p>We encountered an error and cannot fulfill the request. The error has been traced and we will work hard to get a fix out as soon as possible.<b>Try to refresh this page or feel free to contact us if the problem persists.</b></p>
     </div>
     <div class="stack-container">
         <div class="card-container">
