--- a/src/styles.less
+++ b/src/styles.less
@@ -143,9 +143,11 @@ hr{
 }
 .content_section{
 	margin-left: 260px;
+	transition: margin-left linear 0.5s;
 }
 .view_in .content_section{
 	margin-left: 60px;
+	transition: margin-left linear 0.5s;
 }
 .main-topBar{
 	z-index: 1000;
@@ -463,6 +465,7 @@ hr{
 	z-index: 1001;
 	position: fixed;
 	background: #2f4151;
+	transition: width linear 0.5s;
 }
 .view_in .sidebar{
 	width: 60px;
