time analysis changes and navigating changes from metric to log analysis

--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -202,7 +202,8 @@
               <i class="fa fa-sort-down"></i>
             </button>
           </div>
-          <div id="timeAnalysisGraph{{log.id}}" *ngIf="log.id==slectedTimeAnalysis"   >
+          <div id="timeAnalysisGraph{{log.id}}" *ngIf="log.id==slectedTimeAnalysis" [hidden]="!isShow"   >
+            <button class="close" mat-button (click)="closeTimeAnalysis()"><b>X</b></button>
             <fusioncharts
             width="100%"
             height="350"
