--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
@@ -5,6 +5,18 @@
 .chart-bg-color{
     background: #f4f8fb;
 }
+.close.mat-button {
+   
+    top: 0;
+    right: 0;
+    padding: 5px;
+    line-height: 14px;
+    min-width: auto;
+    background-color: #f4f8fb !important;
+    border: 1px solid blue;
+    margin-bottom: 3px;
+    margin-top: 3px;
+  }
 .diamond {
     position: relative;
     height: 27px;
