Changes related to deployment verification layout open issues

--- a/src/app/error-handling/app-error-listing/app-error-listing.component.html
+++ b/src/app/error-handling/app-error-listing/app-error-listing.component.html
@@ -2,7 +2,7 @@
     <div class="error">
         <h1>500</h1>
         <h3>Oops, something went wrong.</h3>
-        <p>We encountered an error and cannot fulfill the request. The error has been traced and we will work hard to get a fix out as soon as possible.<b>Try to refresh this page or feel free to contact us if the problem persists.</b></p>
+        <p>We encountered an error and cannot fulfill the request. The error has been traced and we will work hard to get a fix out as soon as possible.<b>"Try to refresh this page or feel free to contact us if the problem persists."</b></p>
     </div>
     <div class="stack-container">
         <div class="card-container">
