--- a/src/app/error-handling/component-error-listing/component-error-listing.component.html
+++ b/src/app/error-handling/component-error-listing/component-error-listing.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex w-100 h-100">
       <div class="no_content m-auto">
         <img src="../../assets/images/blank-fileIcon.png" alt="">
-        <div [innerHTML] = "errorStringTransformation(errorString)"></div>
+        <div class="errordiv" [innerHTML] = "errorStringTransformation(errorString)"></div>
       </div>
     </div>
 </div>
