Changes related to open issues

--- a/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
+++ b/src/app/charts/stacket-horizontal-bar-chart/stacket-horizontal-bar-chart.component.html
@@ -9,7 +9,7 @@
   [legend]="showLegend"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
-  [xAxisLabel]="yAxisLabel"
+  [xAxisLabel]="xAxisLabel"
   [yAxisLabel]="yAxisLabel"
   [legendPosition]="legendPosition"
   (select)="onSelect($event)"
