--- a/src/app/error-handling/app-error-listing/app-error-listing.component.html
+++ b/src/app/error-handling/app-error-listing/app-error-listing.component.html
@@ -3,6 +3,7 @@
         <h1>500</h1>
         <h3>Oops, something went wrong.</h3>
         <p>We encountered an error and cannot fulfill the request. The error has been traced and we will work hard to get a fix out as soon as possible.<b>"Try to refresh this page or feel free to contact us if the problem persists."</b></p>
+        <p (click)="cleanCache()"><a href="/">Click Here...</a> to clean the cache and login again.</p>
     </div>
     <div class="stack-container">
         <div class="card-container">
