--- a/src/styles.less
+++ b/src/styles.less
@@ -3,7 +3,9 @@
 @import '~saturn-datepicker/bundle.css';
 // below inport for json editor
 @import '~jsoneditor/dist/jsoneditor.min.css';
-textarea.jsoneditor-text{min-height:500px;}
+.ace_editor.ace-jsoneditor {
+	min-height: 600px;
+  }
 .jsoneditor-frame , .jsoneditor-poweredBy{display: none !important;}
     
 @font-face {
