--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -242,7 +242,7 @@
 
 <div class="bottom_btns mt-auto bg-white position-sticky text-right">
   <button class="btn mr-2 btn-default" data-toggle="tooltip"
-    title="Clear the reclassification done by the user">Reset</button>
+    title="Clear the reclassification done by the user" (click)="reset()">Reset</button>
   <button class="btn mr-2 btn-default" (click)="rerunLogs()" data-toggle="tooltip"
     title="Update and Rerun the canary with the updated classification from the user">Re-run</button>
 </div>
